@@ -1,4 +1,4 @@
-DIST lxdream-0.8.3.tar.gz 1100106 RMD160 26bd6ab74b4be3045dac4ba8d4556e75e9e536a0 SHA1 f698f2e2e18603b24beb1852fe33a2e03012a99a SHA256 eb63ea80f317c91e87a122632ab6f3bf4ae891f182c10346fb5852170de784ce
-EBUILD lxdream-0.8.3.ebuild 711 RMD160 ca4b62bb6f986745df92f6b69dc7826a8a58518a SHA1 a6e3ecdf120e5066d6be390e9bc0c05746d8afdc SHA256 06026a866d28e05ecb4a621b115ba8051fddc2af2a3e2daed752e100e5fa1f1e
-MISC ChangeLog 273 RMD160 155f49cdbbd6d292ac54ecfd350d3e7397b2cd58 SHA1 cfee653bf6eef04b6e3c7d8125926cfbf424a449 SHA256 58dabe0de6aafa2961426d7b8e263ec261e2fc5519fba374113eb4ba118f43a9
+DIST lxdream-0.8.4.tar.gz 1501993 RMD160 b0fd3239b9eedf15ee415de3c2eda7dc199d4581 SHA1 13fe573052317f75053cfd4c52b46ad769ea318c SHA256 bc61a54898965249f4b74ff6b76941cfd81baefc93f1cca836e8699290fa9db3
+EBUILD lxdream-0.8.4.ebuild 1012 RMD160 cb05e154fa1397465c7fd02a8197350c8e01e941 SHA1 67bb8da844be9f391119729e795414414ec61f88 SHA256 909c96c2fd06b33711a8df35cd5daf30bf3236cbc2eb28751fbaa8fe0b8557c4
+MISC ChangeLog 457 RMD160 f315bbf33537b37b13a977a9106cbd710d6b82c3 SHA1 435aea47f84259322cf0d379c1bb203c8e4270fd SHA256 bb0742a5fb3bd86c85451aa8cfaf3bf1bc501a7a13933d591f91fae7051e692b
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
